unpackaged/main/default/objects/Opportunity/fields/AnnualisedSubscriptionValue__c.field-meta.xml
<CustomField>
    <fullName>AnnualisedSubscriptionValue__c</fullName>
    <description>Annualised monthly subscription value + annualised expected overage value</description>
    <formula>MonthlySubscriptionValue__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualised Subscription Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>