unpackaged/main/default/objects/Opportunity/fields/ContractLength__c.field-meta.xml
<CustomField>
    <fullName>ContractLength__c</fullName>
    <description>Length of the opportunity contract</description>
    <label>Contract Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Days Rolling</fullName>
            </value>
            <value>
                <fullName>60 Days Rolling</fullName>
            </value>
            <value>
                <fullName>90 Days Rolling</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>4 Months</fullName>
            </value>
            <value>
                <fullName>5 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>7 Months</fullName>
            </value>
            <value>
                <fullName>8 Months</fullName>
            </value>
            <value>
                <fullName>9 Months</fullName>
            </value>
            <value>
                <fullName>10 Months</fullName>
            </value>
            <value>
                <fullName>11 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>13 Months</fullName>
            </value>
            <value>
                <fullName>14 Months</fullName>
            </value>
            <value>
                <fullName>15 Months</fullName>
            </value>
            <value>
                <fullName>16 Months</fullName>
            </value>
            <value>
                <fullName>17 Months</fullName>
            </value>
            <value>
                <fullName>18 Months</fullName>
            </value>
            <value>
                <fullName>19 Months</fullName>
            </value>
            <value>
                <fullName>20 Months</fullName>
            </value>
            <value>
                <fullName>21 Months</fullName>
            </value>
            <value>
                <fullName>22 Months</fullName>
            </value>
            <value>
                <fullName>23 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>25 Months</fullName>
            </value>
            <value>
                <fullName>26 Months</fullName>
            </value>
            <value>
                <fullName>27 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>