unpackaged/main/default/objects/Opportunity/fields/CreateNewLead__c.field-meta.xml
<CustomField>
    <fullName>CreateNewLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify the creation of a new lead should the opportunity be set to closed/lost</description>
    <label>Create New Lead</label>
    <type>Checkbox</type>
</CustomField>