unpackaged/main/default/objects/Opportunity/fields/DeviceProductValue__c.field-meta.xml
<CustomField>
    <fullName>DeviceProductValue__c</fullName>
    <description>Total value of devices associated with the opportunity</description>
    <label>Device Product Value</label>
    <summarizedField>ProductAndService__c.TotalPrice__c</summarizedField>
    <summaryFilterItems>
        <field>ProductAndService__c.ProductType__c</field>
        <operation>equals</operation>
        <value>Device</value>
    </summaryFilterItems>
    <summaryForeignKey>ProductAndService__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>