unpackaged/main/default/objects/Opportunity/fields/EstimatedProfitValue__c.field-meta.xml
<CustomField>
    <fullName>EstimatedProfitValue__c</fullName>
    <description>Estimated profit value of the contract over a 12 month period</description>
    <label>Estimated Profit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>