unpackaged/main/default/objects/Opportunity/fields/ExpectedMonthlyOverageRevenue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedMonthlyOverageRevenue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Expected overage revenue amount of the opportunity (monthly)</description>
    <label>Expected Monthly Overage Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>