unpackaged/main/default/objects/Opportunity/fields/ExternalReferrer__c.field-meta.xml
<CustomField>
    <fullName>ExternalReferrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>External Referrer who sourced the opportunity (if any)</description>
    <label>External Referrer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>EXTERNAL REFERRER LOOKUP MUST BE AN EXTERNAL REFERRER ACCOUNT TYPE</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>External Referrer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>