unpackaged/main/default/objects/Opportunity/fields/ExternalReferrerCommissionAmount__c.field-meta.xml
<CustomField>
    <fullName>ExternalReferrerCommissionAmount__c</fullName>
    <description>Expected commission amount for the external referrer should the deal be closed. For percentage is % of device + % of annualised monthly subscription</description>
    <formula>IF(ISBLANK(ExternalReferrer__c),0,
IF(ISPICKVAL(ExternalReferrer__r.CommissionStructure__c,&#39;Fixed Fee&#39;),ExternalReferrer__r.FixedCommissionAmount__c,
TotalOpportunityValue__c *  ExternalReferrer__r.CommissionPercentage__c 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Referrer Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>