unpackaged/main/default/objects/Opportunity/fields/LeadFirstName__c.field-meta.xml
<CustomField>
    <fullName>LeadFirstName__c</fullName>
    <description>First name of the lead to be created if required</description>
    <label>Lead First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>