unpackaged/main/default/objects/Opportunity/fields/LeadLastName__c.field-meta.xml
<CustomField>
    <fullName>LeadLastName__c</fullName>
    <description>Surname of the lead to be created, should it be required</description>
    <label>Lead Last Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>