unpackaged/main/default/objects/Opportunity/fields/LeadSalutation__c.field-meta.xml
<CustomField>
    <fullName>LeadSalutation__c</fullName>
    <description>Salutation of contact for creation of the new lead should it be required</description>
    <label>Lead Salutation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>