unpackaged/main/default/objects/Opportunity/fields/MonthlySubscriptionValue__c.field-meta.xml
<CustomField>
    <fullName>MonthlySubscriptionValue__c</fullName>
    <description>Monthly value from subscriptions</description>
    <label>Monthly Subscription Value</label>
    <summarizedField>ProductAndService__c.TotalPrice__c</summarizedField>
    <summaryFilterItems>
        <field>ProductAndService__c.ProductType__c</field>
        <operation>equals</operation>
        <value>Monthly Subscription</value>
    </summaryFilterItems>
    <summaryForeignKey>ProductAndService__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>