unpackaged/main/default/objects/Opportunity/fields/NewLeadContactDate__c.field-meta.xml
<CustomField>
    <fullName>NewLeadContactDate__c</fullName>
    <description>Contact date for the new lead created should the opportunity be closed/lost</description>
    <label>New Lead Contact Date</label>
    <type>DateTime</type>
</CustomField>