unpackaged/main/default/objects/Opportunity/fields/NoConnections__c.field-meta.xml
<CustomField>
    <fullName>NoConnections__c</fullName>
    <description>Number of connections</description>
    <label>Number of Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>