unpackaged/main/default/objects/Opportunity/fields/OtherLossReason__c.field-meta.xml
<CustomField>
    <fullName>OtherLossReason__c</fullName>
    <description>Reason for lost opportunity if the loss reason is other</description>
    <label>Other Loss Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>