unpackaged/main/default/objects/Opportunity/fields/OverageValueAnalyticsCompleted__c.field-meta.xml
<CustomField>
    <fullName>OverageValueAnalyticsCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify if any analytics has been completed in determining the potential overage value of the opportunity</description>
    <label>Overage Value Analytics Completed?</label>
    <type>Checkbox</type>
</CustomField>