unpackaged/main/default/objects/Opportunity/fields/TotalOpportunityValue__c.field-meta.xml
<CustomField>
    <fullName>TotalOpportunityValue__c</fullName>
    <description>Total value of the opportunity (device value + annualised subscription and overage value)</description>
    <formula>AnnualisedSubscriptionValue__c + DeviceProductValue__c +  (ExpectedMonthlyOverageRevenue__c *12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Opportunity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>