unpackaged/main/default/objects/Opportunity/validationRules/Check_Account_Payment_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Account_Payment_Type</fullName>
    <active>true</active>
    <description>Check account payment type is present before the opportunity can be set to closed/won</description>
    <errorConditionFormula>ISBLANK(TEXT( Account.PaymentType__c ))
&amp;&amp; ISPICKVAL(StageName,&#39;Closed Won&#39;)</errorConditionFormula>
    <errorMessage>PAYMENT TYPE ON THE ACCOUNT MUST BE SET BEFORE OPPORTUNITY CAN BE SET TO CLOSE WON</errorMessage>
</ValidationRule>