unpackaged/main/default/objects/Opportunity/validationRules/Check_Account_Tax_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Account_Tax_Type</fullName>
    <active>true</active>
    <description>Check account tax type is present before the opportunity can be set to closed/won</description>
    <errorConditionFormula>ISBLANK(TEXT(Account.TaxType__c))
&amp;&amp; ISPICKVAL(StageName,&#39;Closed Won&#39;)</errorConditionFormula>
    <errorMessage>TAX TYPE ON THE ACCOUNT MUST BE SET BEFORE OPPORTUNITY CAN BE SET TO CLOSE WON</errorMessage>
</ValidationRule>