unpackaged/main/default/objects/Opportunity/validationRules/Check_New_Lead_Contact_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_New_Lead_Contact_Date</fullName>
    <active>true</active>
    <description>Check new lead contact date is set when create new lead is checked</description>
    <errorConditionFormula>CreateNewLead__c = TRUE
&amp;&amp; ISNULL(NewLeadContactDate__c)</errorConditionFormula>
    <errorDisplayField>NewLeadContactDate__c</errorDisplayField>
    <errorMessage>NEW LEAD CONTACT DATE MUST BE SET IF A NEW LEAD IS REQUIRED WHEN OPPORTUNITY IS LOST</errorMessage>
</ValidationRule>