unpackaged/main/default/objects/Opportunity/validationRules/Check_Other_Loss_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Other_Loss_Reason</fullName>
    <active>true</active>
    <description>Check when loss reason is set to other that the other reason is populated</description>
    <errorConditionFormula>ISPICKVAL(Loss_Reason__c,&#39;Other&#39;)
&amp;&amp; ISBLANK(OtherLossReason__c)</errorConditionFormula>
    <errorDisplayField>OtherLossReason__c</errorDisplayField>
    <errorMessage>WHEN LOSS REASON IS OTHER, OTHER LOSS REASON MUST BE POPULATED</errorMessage>
</ValidationRule>