unpackaged/main/default/objects/Opportunity/listViews/All_Opportunities_Amount_Opportunity.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_Amount_Opportunity</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>TotalOpportunityValue__c</columns>
    <columns>EstimatedProfitValue__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Qualification,Needs Analysis,Proposal,Negotiation</value>
    </filters>
    <label>All Opportunities - Amount &amp; Opportunity</label>
</ListView>